--- a/app-swosh/app-swosh/Base.lproj/Main.storyboard
+++ b/app-swosh/app-swosh/Base.lproj/Main.storyboard
@@ -49,6 +49,9 @@
                                 <state key="normal" title="GET STARTED">
                                     <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 </state>
+                                <connections>
+                                    <segue destination="HBx-Dw-Toz" kind="show" id="zpp-pW-SPK"/>
+                                </connections>
                             </button>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Find a team in your city &amp; dominate the league" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="s0c-Am-Je7">
                                 <rect key="frame" x="50" y="307.5" width="275" height="49.5"/>
@@ -100,6 +103,17 @@
                             <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="desiredLeagueBG" translatesAutoresizingMaskIntoConstraints="NO" id="DFE-Ic-gy5">
                                 <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                             </imageView>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Hhc-Nm-qJJ" customClass="BorderButton" customModule="app_swosh" customModuleProvider="target">
+                                <rect key="frame" x="0.0" y="612" width="375" height="35"/>
+                                <color key="backgroundColor" white="0.0" alpha="0.39807988560000002" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="35" id="dhq-2z-SW8"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" name="Avenir-Medium" family="Avenir" pointSize="17"/>
+                                <state key="normal" title="NEXT">
+                                    <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                </state>
+                            </button>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="20" translatesAutoresizingMaskIntoConstraints="NO" id="7Cr-lf-NC2">
                                 <rect key="frame" x="0.0" y="156" width="375" height="145"/>
                                 <subviews>
@@ -156,16 +170,16 @@
                                     </label>
                                 </subviews>
                             </stackView>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Hhc-Nm-qJJ" customClass="BorderButton" customModule="app_swosh" customModuleProvider="target">
-                                <rect key="frame" x="0.0" y="612" width="375" height="35"/>
-                                <color key="backgroundColor" white="0.0" alpha="0.39807988560000002" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="mqH-Uw-U2M">
+                                <rect key="frame" x="0.0" y="20" width="29" height="24"/>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="35" id="dhq-2z-SW8"/>
+                                    <constraint firstAttribute="width" constant="29" id="N7V-l4-Swr"/>
+                                    <constraint firstAttribute="height" constant="24" id="e9G-Mf-1F7"/>
                                 </constraints>
-                                <fontDescription key="fontDescription" name="Avenir-Medium" family="Avenir" pointSize="17"/>
-                                <state key="normal" title="NEXT">
-                                    <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                                </state>
+                                <state key="normal" image="backButton"/>
+                                <connections>
+                                    <segue destination="zBv-Eq-4rd" kind="unwind" unwindAction="unwindFromSkillVCWithUnwindSegue:" id="RdH-9l-yhE"/>
+                                </connections>
                             </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
@@ -183,13 +197,16 @@
                             <constraint firstItem="qeZ-aX-WwI" firstAttribute="trailing" secondItem="96u-Nh-g2O" secondAttribute="trailing" id="ck2-HH-Aqj"/>
                             <constraint firstItem="Hhc-Nm-qJJ" firstAttribute="leading" secondItem="qeZ-aX-WwI" secondAttribute="leading" id="lSt-sl-ED3"/>
                             <constraint firstItem="7Cr-lf-NC2" firstAttribute="top" secondItem="96u-Nh-g2O" secondAttribute="bottom" constant="50" id="roU-gy-caU"/>
+                            <constraint firstItem="mqH-Uw-U2M" firstAttribute="leading" secondItem="qeZ-aX-WwI" secondAttribute="leading" id="xBp-sL-dDe"/>
+                            <constraint firstItem="mqH-Uw-U2M" firstAttribute="top" secondItem="Mil-TF-Fsk" secondAttribute="top" constant="20" id="y2l-RY-EzQ"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="qeZ-aX-WwI"/>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="BCi-aw-l2W" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <exit id="zBv-Eq-4rd" userLabel="Exit" sceneMemberID="exit"/>
             </objects>
-            <point key="canvasLocation" x="183" y="6"/>
+            <point key="canvasLocation" x="181.59999999999999" y="5.8470764617691158"/>
         </scene>
         <!--View Controller-->
         <scene sceneID="dBg-ue-1I1">
@@ -284,6 +301,7 @@
         </scene>
     </scenes>
     <resources>
+        <image name="backButton" width="29" height="24"/>
         <image name="beginnerBallerBG" width="414" height="736"/>
         <image name="desiredLeagueBG" width="414" height="736"/>
         <image name="swooshLogo" width="119" height="20"/>
